# SmolML

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
smolml/core/: README.md  ml_array.py
smolml/models/: __init__.py
smolml/models/nn/: README.md  neural_network.py
smolml/models/regression/: README.md  regression.py
smolml/models/svm/: README.md  __init__.py  svm.py
smolml/models/tree/: README.md  decision_tree.py  random_forest.py
smolml/models/unsupervised/: README.md
smolml/preprocessing/: README.md
smolml/utils/: README.md  initializers.py
tests/: decision_tree_tests.py  example.py  neural_network_tests.py  regression_tests.py  requirements.txt  svm_tests.py
