[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SmolML"
version = "0.1.0"
description = "A small machine learning library built from scratch for educational purposes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pablo Rodríguez", email = "rodmarprogrammer@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scikit_learn>=1.5.2",
    "setuptools>=75.3.0",
    "tensorflow>=2.18.0",
]

[project.urls]
"Source Code" = "https://github.com/rodmarkun/SmolML"

[tool.setuptools]
packages = ["smolml"]